force-app/main/default/objects/Daily_Sales_Certification_Batch__c/Daily_Sales_Certification_Batch__c.object-meta.xml
<CustomObject>
    <description>Brand Portal object that will save all records related to the certifications</description>
    <label>Daily Sales Certification Batch</label>
    <nameField>
        <label>Certification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Daily Sales Certification Batches</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>