force-app/main/default/objects/Daily_Sales_Certification_Batch__c/fields/BP_Validation_Context_Override__c.field-meta.xml
<CustomField>
    <fullName>BP_Validation_Context_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This fields is used to do an override on a specific validation Rule (Store_Closed_with_Sales) in order to enable the editing of fields. The context varies between Daily Sales Entry and Certification tiles.</description>
    <label>Validation Context Override</label>
    <type>Checkbox</type>
</CustomField>