force-app/main/default/objects/Daily_Sales_Certification_Batch__c/fields/Brand_Must_Edit_Before_Submission__c.field-meta.xml
<CustomField>
    <fullName>Brand_Must_Edit_Before_Submission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Brand Must Edit Before Submission</label>
    <type>Checkbox</type>
</CustomField>