force-app/main/default/objects/Daily_Sales_Certification_Batch__c/fields/Certification_Batch_Village_Code__c.field-meta.xml
<CustomField>
    <fullName>Certification_Batch_Village_Code__c</fullName>
    <description>Certification batch village code for Daily sales Certification sharing rule attribution implementation</description>
    <inlineHelpText>The village code for the village that the batch is associated to</inlineHelpText>
    <label>Certification Batch Village Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>