force-app/main/default/objects/Daily_Sales_Certification_Batch__c/fields/Certification_Period_Type__c.field-meta.xml
<CustomField>
    <fullName>Certification_Period_Type__c</fullName>
    <inlineHelpText>The Certification Batch period type will either be monthly or quarterly</inlineHelpText>
    <label>Certification Period Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>