force-app/main/default/objects/Daily_Sales_Certification_Batch__c/fields/Certification_Submission_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Certification_Submission_Deadline__c</fullName>
    <formula>Period_End_Date__c + Village_Presence__r.Village__r.CertSales_CertPeriod_Cut_Off_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The date of the deadline for submitting this Certification Batch</inlineHelpText>
    <label>Certification Submission Deadline</label>
    <type>Date</type>
</CustomField>