force-app/main/default/objects/Daily_Sales_Certification_Batch__c/fields/Certified_by__c.field-meta.xml
<CustomField>
    <fullName>Certified_by__c</fullName>
    <inlineHelpText>The name of the Brand Head Office user that submitted the Certification Batch</inlineHelpText>
    <label>Certified by</label>
    <length>100</length>
    <type>Text</type>
</CustomField>