force-app/main/default/objects/Daily_Sales_Certification_Batch__c/fields/Certified_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Certified_Date_Time__c</fullName>
    <inlineHelpText>The date and time when the Certification Batch was submitted by the Brand Head Office</inlineHelpText>
    <label>Certified Date Time</label>
    <type>DateTime</type>
</CustomField>