force-app/main/default/objects/Daily_Sales_Certification_Batch__c/fields/Overall_Comment__c.field-meta.xml
<CustomField>
    <fullName>Overall_Comment__c</fullName>
    <inlineHelpText>Any overall comment for this Certification Batch entered by the Brand Head Office user</inlineHelpText>
    <label>Overall Comment</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>