force-app/main/default/objects/Daily_Sales_Certification_Batch__c/fields/Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Period_End_Date__c</fullName>
    <inlineHelpText>The end date for this Certification Batch</inlineHelpText>
    <label>Period End Date</label>
    <type>Date</type>
</CustomField>