force-app/main/default/objects/Daily_Sales_Certification_Batch__c/fields/Period_Name__c.field-meta.xml
<CustomField>
    <fullName>Period_Name__c</fullName>
    <inlineHelpText>The period name for the Certification Batch</inlineHelpText>
    <label>Period Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>