force-app/main/default/objects/Daily_Sales_Certification_Batch__c/fields/Period_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Period_Start_Date__c</fullName>
    <inlineHelpText>The start date for this Certification Batch</inlineHelpText>
    <label>Period Start Date</label>
    <type>Date</type>
</CustomField>