force-app/main/default/objects/Daily_Sales_Certification_Batch__c/fields/Reject_Reason__c.field-meta.xml
<CustomField>
    <fullName>Reject_Reason__c</fullName>
    <inlineHelpText>The reason for any rejections of this Certification Batch entered by VR Finance</inlineHelpText>
    <label>Reject Reason</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>