force-app/main/default/objects/Daily_Sales_Certification_Batch__c/fields/Total_Brand_Reported_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Brand_Reported_Amount__c</fullName>
    <inlineHelpText>The total brand reported amount for this Certification Batch</inlineHelpText>
    <label>Total Brand Reported Amount</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>