force-app/main/default/objects/Daily_Sales_Certification_Batch__c/fields/Total_Certified_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Certified_Amount__c</fullName>
    <inlineHelpText>The total certified amount for this Certification Batch</inlineHelpText>
    <label>Total Certified Amount</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>