force-app/main/default/objects/Daily_Sales_Certification_Batch__c/fields/Total_Certified_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Certified_Discount_Amount__c</fullName>
    <description>This field represents the total Certified Discount amount of the daily sales related to this certification batch.</description>
    <inlineHelpText>The total certified Discount Amount for the certification period</inlineHelpText>
    <label>Total Certified Discount Amount</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>