force-app/main/default/objects/Daily_Sales_Certification_Batch__c/fields/Total_Certified_Net_Sales_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Certified_Net_Sales_Amount__c</fullName>
    <description>This field represents the total Certified Net Sales amount of the daily sales related to this certification batch.</description>
    <inlineHelpText>The total certified Net Sales amount for the certification period</inlineHelpText>
    <label>Total Certified Net Sales Amount</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>