force-app/main/default/objects/Daily_Sales_Certification_Batch__c/fields/Total_Variance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Variance_Amount__c</fullName>
    <formula>Total_Certified_Amount__c - Total_Brand_Reported_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The variance amount between the total brand reported amount and the total certified amount for the Certification Batch</inlineHelpText>
    <label>Total Variance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>