force-app/main/default/objects/Daily_Sales_Certification_Batch__c/fields/Total_Variance_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Total_Variance_Percentage__c</fullName>
    <formula>( Total_Certified_Amount__c - Total_Brand_Reported_Amount__c )/IF(OR(ISBLANK(Total_Brand_Reported_Amount__c),Total_Brand_Reported_Amount__c = 0),1,Total_Brand_Reported_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The total variance as a percentage</inlineHelpText>
    <label>Total Variance Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>