force-app/main/default/objects/Daily_Sales_Certification_Batch__c/fields/Variance_percentage_out_of_limits__c.field-meta.xml
<CustomField>
    <fullName>Variance_percentage_out_of_limits__c</fullName>
    <formula>IF( OR(Total_Variance_Percentage__c &gt;  Village_Presence__r.Village__r.CertSales_Tot_Variance_Max_Percent__c, (Total_Variance_Percentage__c * -1) &gt;  Village_Presence__r.Village__r.CertSales_Tot_Variance_Max_Percent__c), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This will be ticked if the variance percentage for this Certification Batch is out of the max percentage limits for the specific village</inlineHelpText>
    <label>Variance percentage out of limits</label>
    <type>Checkbox</type>
</CustomField>