force-app/main/default/objects/Daily_Sales_Certification_Batch__c/fields/Village_Presence__c.field-meta.xml
<CustomField>
    <fullName>Village_Presence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Village Presence</label>
    <referenceTo>Village_Presence__c</referenceTo>
    <relationshipName>Certifications</relationshipName>
    <type>Lookup</type>
</CustomField>