force-app/main/default/objects/Daily_Sales_Certification_Batch__c/recordTypes/Finish.recordType-meta.xml
<RecordType>
    <fullName>Finish</fullName>
    <active>true</active>
    <label>Finish</label>
</RecordType>