force-app/main/default/objects/Daily_Sales_Certification_Batch__c/recordTypes/POST_Submit.recordType-meta.xml
<RecordType>
    <fullName>POST_Submit</fullName>
    <active>true</active>
    <label>POST-Submit</label>
</RecordType>