force-app/main/default/objects/Daily_Sales_Certification_Batch__c/recordTypes/PRE_Submit.recordType-meta.xml
<RecordType>
    <fullName>PRE_Submit</fullName>
    <active>true</active>
    <label>PRE-Submit</label>
</RecordType>